Fix contrast issue for ARIA attributes

--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -217,7 +217,7 @@ div.chrome-ax-tooltip[role="tooltip"] dl dd {
 }
 
 .chrome-ax-tooltip .aria-badge {
-  color: #2d8a30;
+  color: #216624;
   margin: 0.15rem 0.15rem 0 0.15rem;
 }
 
